--- a/index.html
+++ b/index.html
@@ -15,10 +15,14 @@
                 <div class="filter filters__crime"></div>
                 <div class="filter filters__incarceration"></div>
                 <div class="filter filters__officer"></div>
+                <div class="notes__button"></div>
             </div>
         </header>
         <article class="noteFormContainer"></article>
-        <article class="criminalsContainer"></article>
+        <div class="listsContainer">
+            <article class="criminalsContainer"></article>
+            <article class="notesContainer"></article>
+        </div>
     </main>
 
     <script type="module" src="./scripts/main.js"></script>
