--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                 <div class="filter filters__incarceration"></div>
                 <div class="filter filters__officer"></div>
                 <div class="notes__button"></div>
+                <div class="noteForm__button"></div>
             </div>
         </header>
         <article class="noteFormContainer"></article>
