Now with facilities

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <div class="notes__button"></div>
                 <div class="noteForm__button"></div>
                 <div class="witness__button"></div>
+                <div class="facility__button"></div>
             </div>
         </header>
 
@@ -26,6 +27,7 @@
         <div class="listsContainer">
             <article class="criminalsContainer"></article>
             <article class="statementContainer"></article>
+            <article class="facilityContainer"></article>
             <article class="notesContainer"></article>
         </div>
         <div class="knownAssociatesContainer"></div>
